# fair-debate-md

./: .gitignore  README.md  markdownify_problem.py  markdownify_roundtrip.py  pyproject.toml  requirements.txt  todo_notes.md
.github/workflows/: python-app.yml
docs/: multi_party_concept.md
docs/source/: devdocs.md
src/fair_debate_md/: __init__.py  cli.py  core.py  key_management.py  md_handling.py  repo_handling.py  utils.py
src/fair_debate_md/fixtures/: __init__.py  txt1.md
src/fair_debate_md/fixtures/debate1/a/: a.md  a2b1a.md
src/fair_debate_md/fixtures/debate1/b/: a1b.md  a2b.md  a2b1a3b.md  a3b.md  a4b.md  a6b.md  a7b.md
src/fair_debate_md/fixtures/repo-preparation/: README.md
src/fair_debate_md/fixtures/repo-preparation/d00-explanatory-example-debate__plain/a/: a.md  a5b2a.md
src/fair_debate_md/fixtures/repo-preparation/d00-explanatory-example-debate__plain/b/: a13b.md  a14b.md  a5b.md
src/fair_debate_md/fixtures/repos/d00-explanatory-example-debate/patches_01/: 0001-my-contribution.patch  0002-my-contribution.patch
src/fair_discussion_md/: __init__.py  core.py  utils.py
tests/: conftest.py  test_core.py  test_md_handling.py  test_sorting_and_git_fallback.py  test_yaml_frontmatter.py
tests/testdata/: txt1.md  txt1_raw_html.html  txt1_segmented_html.html  txt1_segmented_html_v2.html  txt1_with_proto_keys.md
